[tool.poetry]
name = "crunchybot"
version = "4.5.6"
description = "Crunchyroll Guest Pass Publisher for Reddit"
authors = ["David Lam <david.lam@lamdav.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
]
repository = "https://github.com/lamdav/CrunchyBot"
readme = "README.md"
packages = [
  { include = "crunchy_bot" }
]

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7.1.2"
praw = "^7.1.4"
prawcore = "^1.5.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0.1"
pytest = "^6.2.2"

[tools.poetry.urls]
"Bug Reports" = "https://github.com/lamdav/CrunchyBot/issues"

[tools.poetry.scripts]
crunchy = "crunchy_bot.client.cli:cli"

[tool.commitizen]
name = "cz_conventional_commits"
version = "4.5.6"
version_files = [
  "pyproject.toml:version",
  "botData.json",
]

[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
